--- a/cerroconcepcion_b-b_eng.html
+++ b/cerroconcepcion_b-b_eng.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<script src="index.js"></script>
 <title>Bed and Breakfast in Cerro Concepcion Valparaiso, Chile </title>
 	<link rel="canonical" href="http://cerroconcepcion.cl/cerroconcepcion_b-b_eng.html" />
 <meta name="verify-v1" content="MHnMKtexJL32miOyp5vdnijQfzBe/xKuO/XSflPK/OE="/>
 <meta name="msvalidate.01" content="ED0940AD184D5A7543E9CBFA584B8D47"/>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-<meta name="keywords" content="Reservations in Valparaiso Reserving bed and breakfasts, hotel bookings in valparaiso, booking a budget bed &amp; breakfast, cerro concepcion budget b &amp; b, bed &amp; breakfast reservations, booking a hostel in Cerro Concepcion, booking a  B &amp; B in cerro Alegre, Cerro Alegre B &amp; B, Valparaiso best hostels , bed and brekfst best deals, Valparaiso best location to sleep, hostales en valparaiso, hostales en cerro concepcion, ofertas de hostales, hostales económicos en valparaiso, Alecon FineHostel, alma porteña"/>
+<meta name="keywords" content="Reservations in Valparaiso Reserving bed and breakfasts, hotel bookings in valparaiso, booking a budget bed &amp; breakfast, cerro concepcion budget b &amp; b, bed &amp; breakfast reservations, booking a hostel in Cerro Concepcion, booking a  B &amp; B in cerro Alegre, Cerro Alegre B &amp; B, Valparaiso best hostels , bed and brekfst best deals, Valparaiso best location to sleep, hostales en valparaiso, hostales en cerro concepcion, ofertas de hostales, hostales econï¿½micos en valparaiso, Alecon FineHostel, alma porteï¿½a"/>
 <meta name="description" content="Best bed and breakfasts in Cerro Concepcion"/>
 <meta name="author" content="Juan Alberto Carrasco Carvajal"/>
 <meta name="copyright" content="Copyright (c) 2010 by J.A. Carrasco Carvajal"/>
@@ -114,7 +115,7 @@ function MM_preloadImages() { //v3.0
     </div>
 	<div id="left">
 	  <h3 class="Estilo59">best bed & breakfast</h3>
-	  <p class="Estilo59"><img src="images/ALECONICON.jpg" alt="Alecon FineHostel façade" width="50" height="30"/> <a href="aleconfinehost_eng.html" class="Estilo39">Alecon FineHostel</a></p>
+	  <p class="Estilo59"><img src="images/ALECONICON.jpg" alt="Alecon FineHostel faï¿½ade" width="50" height="30"/> <a href="aleconfinehost_eng.html" class="Estilo39">Alecon FineHostel</a></p>
 	  <p align="center" class="Estilo46 Estilo58">A perfect holiday destination</p>
 	  <p class="Estilo59"><img src="images/latinaicon.jpg" alt="" width="50" height="30"/> <a href="latina_eng.html" class="Estilo35"> Casa Latina</a></p>
 	  <p class="Estilo59"><img src="images/lieselicon.jpg" alt="" width="50" height="30"/> <a href="casaliesel_eng.html">Casa Liesel</a></p>
