--- a/cerroconcepcion_inicio.html
+++ b/cerroconcepcion_inicio.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Cerro Concepción de Valparaiso Chile</title>
+<script src="index.js"></script>
+<title>Cerro Concepciï¿½n de Valparaiso Chile</title>
 	<link rel="canonical" href="http://cerroconcepcion.cl/cerroconcepcion_inicio.html" />
 <meta name="verify-v1" content="MHnMKtexJL32miOyp5vdnijQfzBe/xKuO/XSflPK/OE="/>
 <meta name="msvalidate.01" content="ED0940AD184D5A7543E9CBFA584B8D47"/>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-<meta name="keywords" content="Valparaiso, cerroconcepcion, cerro concepción de valparaiso, Turismo en Cerro Concepción, Historia del Cerro Concepcion, turismo en Valparaiso, turismo en cerro alegre, Valparaiso patrimonio de la humanidad, Cerros patrimoniales de Valparaiso,  Ascensores del cerro concepcion, alma porteña "/>
-<meta name="description" content=" Cerro Concepción patrimonio de la humanidad "/>
+<meta name="keywords" content="Valparaiso, cerroconcepcion, cerro concepciï¿½n de valparaiso, Turismo en Cerro Concepciï¿½n, Historia del Cerro Concepcion, turismo en Valparaiso, turismo en cerro alegre, Valparaiso patrimonio de la humanidad, Cerros patrimoniales de Valparaiso,  Ascensores del cerro concepcion, alma porteï¿½a "/>
+<meta name="description" content=" Cerro Concepciï¿½n patrimonio de la humanidad "/>
 <meta name="author" content="Juan Alberto Carrasco Carvajal"/>
 <meta name="copyright" content="Copyright (c) 2008 by Juan Alberto Carrasco Carvajal"/>
 <meta name="robots" content="all, follow"/>
