--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@ function MM_preloadImages() { //v3.0
     <tr>
       <td width="240" height="37" align="center" valign="middle" bgcolor="#F6F6F8"><p><a href="cerroconcepcion_home.html"><img src="images/flagen_25.gif" width="40" height="22" border="0" align="top"/></a><span class="Estilo25"> English</span></p></td>
       <td width="439" align="center" valign="middle" bgcolor="#20702B"><p class="Estilo34">Muy pronto, <span class="Estilo35">AQU&Iacute;</span>, la mejor oferta de Fin de Semana</p>        </td>
+		      <td width="439" align="center" valign="middle" bgcolor="#20702B"><p class="Estilo34"></p>   Discover editable templates that make managing your business easier. Our collection of user-friendly PDFs includes invoices, business plans, and <a style="color:blue;" href="Streamline-Your-Business-with-editable-Templates.html">booking confirmation</a> templates. Ideal for restaurants, hotels, galleries, and service businesses, these templates save time, maintain professionalism, and can be customized for any country.     </td>
+
       <td width="240" align="center" valign="middle" bgcolor="#F6F6F8"><p><a href="cerroconcepcion_inicio.html"><img src="images/chileCf.gif" width="40" height="22" border="0" align="top"/></a><span class="Estilo23"> Espa&ntilde;ol</span></p></td>
     </tr>
   </table>
