--- a/Streamline-Your-Business-with-editable-Templates.html
+++ b/Streamline-Your-Business-with-editable-Templates.html
@@ -196,7 +196,7 @@
                 conditions and tourist demands. Art galleries can use it to develop growth strategies and marketing
                 plans effectively. The simple, user-friendly design makes it easy for beginners to modify. These
                 templates are available for different countries, including Switzerland, New York, and others.</p>
-               <p>Q3: How can I manage bookings without stress?</p> 
+               <h2>Q3: How can I manage bookings without stress?</h2> 
                <p> Booking management used to be chaotic, but an <a style="color: blue;" href="https://doctempl.cc/product/zambia-hotel-booking-confirmation-word-and-pdf-template-2-pages/">editable Booking PDF template </a>changed everything. It’s
                 ideal for hotels, travel agencies, and service-oriented businesses that need to confirm reservations.
                 Layers are clearly named, so I can quickly edit customer names, dates, and addresses without any design
@@ -242,5 +242,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
